# hybridbar

./: README.md  meson.build
data/: com.github.hcsubser.hybridbar.gschema.xml  hybridbar.gresource.xml  meson.build
indicators/: build.sh
indicators/calendar/: README.md  meson.build
indicators/calendar/data/: ControlHeader.css  EventRow.css  GridDay.css  com.github.hcsubser.hybridbar.calendar.gschema.xml  datetime.gresource.xml  meson.build
indicators/calendar/po/: POTFILES  ak.po  ar.po  az.po  bg.po  bn.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  da.po  datetime-indicator.pot  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  fi.po  fil.po  fo.po  fr.po  fr_CA.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  ko.po  ku.po  lt.po  mr.po  ms.po  (+31 more)
indicators/calendar/src/: DateIterator.vala  DateRange.vala  Indicator.vala
indicators/calendar/src/Services/: TimeManager.vala
indicators/calendar/src/Widgets/: EventRow.vala  PanelLabel.vala
indicators/calendar/src/Widgets/calendar/: CalendarModel.vala  CalendarView.vala  Grid.vala  GridDay.vala  Util.vala
indicators/menu/: README.md  meson.build  meson_options.txt
indicators/menu/data/: com.github.hcsubser.hybridbar.menu.gschema.xml  hybridbar-applications.menu  icons.gresource.xml  meson.build
indicators/menu/src/: Indicator.vala  SlingshotView.vala  meson.build
indicators/menu/src/Backend/: App.vala  AppSystem.vala  SynapseSearch.vala
indicators/menu/src/Views/: CategoryView.vala  SearchView.vala
indicators/menu/src/Widgets/: AppButton.vala  AppContextMenu.vala  PageChecker.vala
indicators/network/: README.md  meson.build
indicators/network/data/: com.github.hcsubser.hybridbar.network.gschema.xml  meson.build  network.appdata.xml.in
indicators/network/po/: POTFILES  aa.po  ab.po  ae.po  ak.po  an.po  ar.po  as.po  av.po  ay.po  az.po  ba.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  (+142 more)
indicators/network/po/extra/: aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+161 more)
indicators/network/src/: Indicator.vala
indicators/network/src/Widgets/: DisplayWidget.vala  EtherInterface.vala  ModemInterface.vala  PopoverWidget.vala  VpnInterface.vala  WifiInterface.vala
indicators/network/src/common/Widgets/: VpnMenuItem.vala  WidgetNMInterface.vala  WifiMenuItem.vala
indicators/network/vapi/: libnm.vapi  libnma.vapi
indicators/session/: COPYING  README.md  meson.build
indicators/session/data/: com.github.hcsubser.hybridbar.session.gschema.xml  meson.build  session.appdata.xml.in
indicators/session/po/: POTFILES  aa.po  ab.po  ae.po  ak.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  bg.po  bh.po  bi.po  bm.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  (+143 more)
indicators/session/po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+162 more)
indicators/session/src/: Indicator.vala
indicators/session/src/Services/: DbusInterfaces.vala  EndSessionDialogServer.vala  UserManager.vala
indicators/session/src/Widgets/: EndSessionDialog.vala  UserBox.vala  UserListBox.vala
indicators/sound/: COPYING  README.md  meson.build
indicators/sound/data/: com.github.hcsubser.hybridbar.sound.gschema.xml  indicator.css  mask.gresource.xml  meson.build
indicators/sound/po/: POTFILES  aa.po  ab.po  ae.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+151 more)
indicators/sound/src/: Indicator.vala
indicators/sound/src/Services/: Device.vala  Manager.vala  MediaPlayer.vala  MprisClient.vala  Volume-control.vala
indicators/sound/src/Widgets/: DisplayWidget.vala  MprisGui.vala  MprisWidget.vala  Scale.vala
indicators/sound/vapi/: libcanberra-gtk3.deps
indicators/system-tray/: README.md  meson.build
indicators/system-tray/debian/: changelog  control  copyright
indicators/system-tray/src/: AyatanaIndicator.vala  Constants.vala  Indicator.vala  IndicatorButton.vala  IndicatorFactory.vala
lib/: meson.build
src/: Application.vala  PanelWindow.vala  meson.build
src/Services/: BackgroundManager.vala  PopoverManager.vala
src/Widgets/: Panel.vala
vapi/: gtk-layer-shell-0.vapi
